fix: set correct view title

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 </head>
 <body>
     <header>
-        <div class="greeting">
+        <div class="title-wrapper">
             <h1 class="title" >Welcome to the Memory Game</h1>
         </div>
-        <h2 class="steps">Step</h2>
+        <div class="steps-wrapper">
+            <h2 class="steps">Step</h2>
+        </div>
     </header>
     <main>
         <div class="container">
