fix: set correct view to mobiles devices

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <header>
         <div class="title-wrapper">
-            <h1 class="title" >Welcome to the Memory Game</h1>
+            <h1 class="title" >The Memory Game</h1>
         </div>
         <div class="steps-wrapper">
-            <h2 class="steps">Step</h2>
+            <h2 class="steps">Steps</h2>
         </div>
     </header>
     <main>
